k3s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zimozi-app
  namespace: my
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: zimozi-app
  template:
    metadata:
      labels:
        app: zimozi-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: master-node
      containers:
      - name: app
        image: zimozi-app:latest       # ← build & tag this locally
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
