k3s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zimozi-app
  namespace: zimozi
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: zimozi-app
