k3s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: zimozi
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
